force-app/main/default/objects/Termino_de_Referencia__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1147</fullName>
                <label>Desarrollos</label>
            </value>
            <value>
                <fullName>1148</fullName>
                <default>true</default>
                <label>Funcional</label>
            </value>
            <value>
                <fullName>1149</fullName>
                <label>Garantía</label>
            </value>
            <value>
                <fullName>1150</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>1151</fullName>
                <label>General-Oferta</label>
            </value>
            <value>
                <fullName>1152</fullName>
                <label>Gestión del Cambio</label>
            </value>
            <value>
                <fullName>1153</fullName>
                <label>Interfases</label>
            </value>
            <value>
                <fullName>1154</fullName>
                <label>Legal</label>
            </value>
            <value>
                <fullName>1155</fullName>
                <label>Licencias</label>
            </value>
            <value>
                <fullName>1156</fullName>
                <label>Mantenimiento</label>
            </value>
            <value>
                <fullName>1157</fullName>
                <label>Metodología</label>
            </value>
            <value>
                <fullName>1158</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>1159</fullName>
                <label>Seguridad</label>
            </value>
            <value>
                <fullName>1160</fullName>
                <label>Soporte</label>
            </value>
            <value>
                <fullName>1161</fullName>
                <label>Técnico</label>
            </value>
            <value>
                <fullName>1162</fullName>
                <label>Usabilidad</label>
            </value>
            <value>
                <fullName>1198</fullName>
                <label>Formación</label>
            </value>
            <value>
                <fullName>3287</fullName>
                <label>Personal</label>
            </value>
            <value>
                <fullName>3288</fullName>
                <label>Calidad</label>
            </value>
            <value>
                <fullName>3289</fullName>
                <label>Medios materiales</label>
            </value>
            <value>
                <fullName>Capacitación</fullName>
                <isActive>false</isActive>
                <label>Capacitación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>