force-app/main/default/objects/Termino_de_Referencia__c/fields/Cerrado__c.field-meta.xml
<CustomField>
    <fullName>Cerrado__c</fullName>
    <formula>TEXT(Estado__c) = &apos;Aprobado&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se marca automáticamente cuando el estado es Aceptado</inlineHelpText>
    <label>Cerrado</label>
    <type>Checkbox</type>
</CustomField>