force-app/main/default/objects/Termino_de_Referencia__c/fields/Documentacion_Contractual__c.field-meta.xml
<CustomField>
    <fullName>Documentacion_Contractual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Documentación Contractual</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La documentación seleccionada no pertenece al proyecto del TDR.</errorMessage>
        <filterItems>
            <field>$Source.Proyecto__c</field>
            <operation>equals</operation>
            <valueField>Documentacion_Contractual__c.Proyecto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Documentacion_Contractual__c</referenceTo>
    <relationshipLabel>Términos de Referencia</relationshipLabel>
    <relationshipName>Terminos_de_Referencia</relationshipName>
    <type>Lookup</type>
</CustomField>