force-app/main/default/objects/Termino_de_Referencia__c/fields/Estado_Tasking__c.field-meta.xml
<CustomField>
    <fullName>Estado_Tasking__c</fullName>
    <label>Estado Tasking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>