force-app/main/default/objects/Termino_de_Referencia__c/fields/Fecha_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega__c</fullName>
    <description>La fecha asignada a la entrega del TDR</description>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>