force-app/main/default/objects/Termino_de_Referencia__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Términos de Referencia</relationshipLabel>
    <relationshipName>Terminos_de_Referencia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>