force-app/main/default/objects/Termino_de_Referencia__c/fields/Responsable_Segui_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Segui_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de Seguimiento 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Términos de Referencia</relationshipLabel>
    <relationshipName>Terminos_de_Referencia</relationshipName>
    <type>Lookup</type>
</CustomField>